# AgentsOS

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.agentsos/.hermes/: daemon_runner.py
.agentsos/state/: daemon.jsonl  journal.jsonl  registry.json  state.db
.github/workflows/: ci.yml
.hermes/plans/: 2026-06-28_enterprise-agentsos.md
agents/: schema.json
agents/models/: REGISTRY.md
agents/templates/: code-agent.yaml  local-llama-agent.yaml  orchestrator.yaml  research-agent.yaml
agentsos/: __init__.py  cost_guard.py  daemon.py  goal_parser.py  llm_client.py  manifest.py  orchestrator.py  registry.py  runtime.py  store.py  tools_builtin.py  trace.py  watchdog.py  work_registry.py
agentsos/llm/: fake.py  ollama.py  openai_compat.py
agentsos/telegram/: __init__.py  bot.py  bridge.py  desktop.py  guard.py  hud.py
agentsos/ui/cli/: app.py
docs/: TOKEN_REDUCTION_RESEARCH.md
scripts/: telegram_smoke.py
tests/: test_checkpoint.py  test_cost_guard.py  test_daemon.py  test_daemon_journal.py  test_goal_parser.py  test_llm.py  test_loop.py  test_manifest.py  test_ollama.py  test_openai_compat.py  test_orchestrator.py  test_runtime.py  test_runtime_llm.py  test_store.py  test_telegram_bridge.py  test_telegram_guard.py  test_telegram_hud.py  test_telegram_live.py  test_tokenlab.py  test_tools_builtin.py  test_watchdog.py  test_work_registry.py
tokenlab/: __init__.py  __main__.py  budget.py  cache.py  cli.py  compress.py  count.py  router.py  schema.py  trim.py
tools/: audit_session.py
